test/compile_errors/err_c_import_untranslated_object_macro_requires_allow.w
//! expect-error: c_import symbol 'BAD_OBJECT_MACRO' was omitted

use c_import("err_c_import_untranslated_object_macro_requires_allow.h")

fn main:
    let _value = BAD_OBJECT_MACRO
